--- a/css/style.css
+++ b/css/style.css
@@ -1,34 +1,26 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap");
+@import "reset.css";
+@import "status-bar.css";
 
 body {
   font-family: "Open Sans", sans-serif;
 }
 
-.status-bar {
+#welcome-header {
+  margin: 100px auto;
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
   align-items: center;
+  text-align: center;
 }
 
-.status-bar__column:first-child span {
-  margin-right: 5px;
+.welcome-header__title {
+  font-size: 24px;
+  font-weight: 700;
+  margin-bottom: 30px;
 }
 
-.status-bar__column {
-  width: 33%;
-}
-
-.status-bar__column:nth-child(2) {
-  display: flex;
-  justify-content: center;
-}
-
-.status-bar__column:last-child {
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-}
-
-.status-bar__column:last-child i {
-  margin-left: 3px;
+.welcome-header__text {
+  opacity: 0.7;
+  width: 60%;
 }
