--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&display=swap");
 @import "reset.css";
+@import "variable.css";
+
 @import "status-bar.css";
 
 body {
@@ -7,7 +9,7 @@ body {
 }
 
 #welcome-header {
-  margin: 100px auto;
+  margin: 50px auto;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -23,4 +25,27 @@ body {
 .welcome-header__text {
   opacity: 0.7;
   width: 60%;
+}
+
+#login-form {
+  display: flex;
+  flex-direction: column;
+  padding: 0 30px;
+}
+
+#login-form input {
+  border: none;
+  padding: 15px 0;
+  margin-bottom: 15px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.3);
+  font-size: 18px;
+  transition: all 1s ease-in-out;
+}
+
+#login-form input:focus {
+  border-color: var(--yellow);
+}
+
+#login-form input::placeholder {
+  color: rgba(0, 0, 0, 0.3);
 }
