--- a/css/style.css
+++ b/css/style.css
@@ -35,10 +35,13 @@ body {
 
 #login-form input {
   border: none;
-  padding: 15px 0;
-  margin-bottom: 15px;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.3);
+  padding-bottom: 25px;
+  margin-bottom: 25px;
   font-size: 18px;
+}
+
+#login-form input:not([type="submit"]) {
+  border-bottom: 1px solid rgba(0, 0, 0, 0.3);
   transition: all 1s ease-in-out;
 }
 
@@ -48,4 +51,18 @@ body {
 
 #login-form input::placeholder {
   color: rgba(0, 0, 0, 0.3);
+}
+
+#login-form input[type="submit"] {
+  background-color: var(--yellow);
+  cursor: pointer;
+  border-radius: 5px;
+  padding: 20px 0;
+  margin-top: 15px;
+}
+
+#login-form a {
+  text-decoration: none;
+  text-align: center;
+  color: rgba(0, 0, 0, 0.8);
 }
