--- a/css/style.css
+++ b/css/style.css
@@ -2,67 +2,12 @@
 @import "reset.css";
 @import "variable.css";
 
-@import "status-bar.css";
+/* Components */
+@import "components/status-bar.css";
+
+/* Screens */
+@import "screens/login.css";
 
 body {
   font-family: "Open Sans", sans-serif;
-}
-
-#welcome-header {
-  margin: 50px auto;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-}
-
-.welcome-header__title {
-  font-size: 24px;
-  font-weight: 700;
-  margin-bottom: 30px;
-}
-
-.welcome-header__text {
-  opacity: 0.7;
-  width: 60%;
-}
-
-#login-form {
-  display: flex;
-  flex-direction: column;
-  padding: 0 30px;
-}
-
-#login-form input {
-  border: none;
-  padding-bottom: 25px;
-  margin-bottom: 25px;
-  font-size: 18px;
-}
-
-#login-form input:not([type="submit"]) {
-  border-bottom: 1px solid rgba(0, 0, 0, 0.3);
-  transition: all 1s ease-in-out;
-}
-
-#login-form input:focus {
-  border-color: var(--yellow);
-}
-
-#login-form input::placeholder {
-  color: rgba(0, 0, 0, 0.3);
-}
-
-#login-form input[type="submit"] {
-  background-color: var(--yellow);
-  cursor: pointer;
-  border-radius: 5px;
-  padding: 20px 0;
-  margin-top: 15px;
-}
-
-#login-form a {
-  text-decoration: none;
-  text-align: center;
-  color: rgba(0, 0, 0, 0.8);
 }
