--- a/css/components/nav-bar.css
+++ b/css/components/nav-bar.css
@@ -1,12 +1,18 @@
 .nav {
   background-color: #f9f9fa;
-  padding: 10px 40px;
+  padding: 20px 50px;
   width: 100%;
   position: fixed;
   bottom: 0;
+  box-sizing: border-box;
+  border-top: 1px solid rgba(121, 121, 121, 0.3);
 }
 
 .nav__list {
   display: flex;
   justify-content: space-between;
+}
+
+.nav__link i {
+  color: #2f373f;
 }
