friends 페이지 작업중: User Component Part2

--- a/css/screens/friends.css
+++ b/css/screens/friends.css
@@ -4,6 +4,7 @@
   text-align: center;
   background-color: #fafafa;
   padding: 15px 10px;
+  margin-bottom: 10px;
 }
 
 #friends-display-link i {
@@ -16,4 +17,8 @@
 
 .fa-chevron-right {
   margin-left: 5px;
+}
+
+.friend-screen {
+  padding: 0px var(--horizontal-space);
 }
