--- a/css/screens/friends.css
+++ b/css/screens/friends.css
@@ -22,3 +22,17 @@
 .friend-screen {
   padding: 0px var(--horizontal-space);
 }
+
+.friends-screen__channel {
+  border-top: 1px solid rgba(0, 0, 0, 0.1);
+  margin-top: 25px;
+  padding-top: 15px;
+}
+
+.friends-screen__channel-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: rgba(0, 0, 0, 0.5);
+  margin-bottom: 30px;
+}
