--- a/css/components/user-component.css
+++ b/css/components/user-component.css
@@ -41,5 +41,15 @@
 }
 
 .user-component__column:last-child {
-  color: rgba(0, 0, 0, 0.5);
+  color: rgba(165, 73, 73, 0.4);
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+
+.user-component__column .badge {
+  margin-top: 10px;
+  width: 25px;
+  height: 25px;
+  font-size: 14px;
 }
