--- a/css/components/screen-header.css
+++ b/css/components/screen-header.css
@@ -13,4 +13,15 @@
 
 .screen-header__icons span {
   margin-left: 25px;
+  position: relative;
+}
+
+.new-alram {
+  width: 5px;
+  height: 5px;
+  background-color: tomato;
+  border-radius: 50%;
+  position: absolute;
+  top: -3px;
+  right: -7px;
 }
