--- a/css/screens/friends.css
+++ b/css/screens/friends.css
@@ -25,7 +25,7 @@
 }
 
 .friends-screen__channel {
-  border-top: 1px solid rgba(0, 0, 0, 0.1);
+  border-top: var(--main-border);
   margin-top: 25px;
   padding-top: 15px;
 }
