--- a/css/screens/find.css
+++ b/css/screens/find.css
@@ -31,7 +31,7 @@
 }
 
 .recommended-friends span {
-  margin: 100px 0;
+  margin: 50px 0;
   display: block;
   text-align: center;
   font-size: 18px;
@@ -53,6 +53,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+  padding-bottom: 15px;
 }
 
 .open-post__title {
@@ -93,4 +95,30 @@
 .open-post__member_status {
   color: #ffb0e0;
   font-size: 14px;
+}
+
+.open-post__photo {
+  position: relative;
+}
+
+.open-post__photo img {
+  width: 100px;
+  height: 100px;
+  border-radius: 5px;
+}
+
+.open-post__heart-count {
+  background-color: rgba(0, 0, 0, 0.5);
+  color: white;
+  text-align: center;
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+  padding: 4px 8px;
+  border-radius: 15px;
+  font-size: 14px;
+}
+
+.open-post__heart-count i {
+  margin-right: 3px;
 }
