--- a/css/components/user-component.css
+++ b/css/components/user-component.css
@@ -25,6 +25,11 @@
   opacity: 0.5;
 }
 
+.user-component__subtitle i {
+  color: red;
+  opacity: 1;
+}
+
 .user-component__avatar--xl {
   width: 80px;
   height: 80px;
