--- a/css/screens/more.css
+++ b/css/screens/more.css
@@ -24,3 +24,30 @@
   font-weight: 700;
   margin-bottom: 30px;
 }
+
+.more-suggestions__icons {
+  display: flex;
+  padding: 0px 10px;
+}
+
+.more-suggestions__icon {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-right: 20px;
+}
+
+.more-suggestions__icon-image {
+  background-color: var(--yellow);
+  width: 50px;
+  height: 50px;
+  border-radius: 7.5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.more-suggestions__icon-text {
+  opacity: 0.5;
+}
