--- a/css/components/alt-header.css
+++ b/css/components/alt-header.css
@@ -10,3 +10,16 @@
   font-size: 26px;
   font-weight: 700;
 }
+
+.alt-header__column {
+  display: flex;
+  width: 33%;
+}
+
+.alt-header__column:nth-child(2) {
+  justify-content: center;
+}
+
+.alt-header__column:last-child {
+  justify-content: flex-end;
+}
