chat 페이지 작업중: Chat Screen Part2

--- a/css/components/status-bar.css
+++ b/css/components/status-bar.css
@@ -27,3 +27,7 @@
 .status-bar__column:last-child i {
   margin-left: 5px;
 }
+
+.status-bar__column:last-child .chat-bolt {
+  margin-right: 8px;
+}
