--- a/css/components/alt-header.css
+++ b/css/components/alt-header.css
@@ -23,3 +23,7 @@
 .alt-header__column:last-child {
   justify-content: flex-end;
 }
+
+.alt-header__column:last-child i:last-child {
+  margin-left: 20px;
+}
