--- a/css/screens/chat.css
+++ b/css/screens/chat.css
@@ -1,3 +1,25 @@
 #chat-screen {
   background-color: #abc1d1;
+  height: 200vh;
+}
+
+#chat-screen .status-bar,
+#chat-screen .alt-header {
+  position: fixed;
+  width: 100%;
+  box-sizing: border-box;
+}
+
+#chat-screen .status-bar {
+  top: 5px;
+  z-index: 2;
+}
+
+#chat-screen .alt-header {
+  top: 15px;
+  z-index: 1;
+}
+
+.main-chat {
+  margin-top: 120px;
 }
