--- a/css/screens/chat.css
+++ b/css/screens/chat.css
@@ -39,11 +39,40 @@
 
 .message-row {
   display: flex;
+  width: 100%;
 }
 
 .message-row img {
   width: 50px;
   height: 50px;
   border-radius: 20px;
-  margin-right: 5px;
+  margin-right: 10px;
+}
+
+.message-row__content {
+  margin-top: 3px;
+}
+
+.message__author {
+  opacity: 0.7;
+}
+
+.message__info {
+  display: flex;
+  align-items: flex-end;
+  margin-top: 5px;
+}
+
+.message__bubble {
+  background-color: white;
+  padding: 11px;
+  border-radius: 15px;
+  border-top-left-radius: 0px;
+  font-size: 18px;
+}
+
+.message__time {
+  margin-left: 5px;
+  font-size: 12px;
+  opacity: 0.7;
 }
