--- a/css/screens/chat.css
+++ b/css/screens/chat.css
@@ -40,6 +40,8 @@
 .message-row {
   display: flex;
   width: 100%;
+  margin-bottom: 15px;
+  transform: translateX(-10px);
 }
 
 .message-row img {
@@ -65,7 +67,7 @@
 
 .message__bubble {
   background-color: white;
-  padding: 11px;
+  padding: 12px;
   border-radius: 15px;
   border-top-left-radius: 0px;
   font-size: 18px;
@@ -75,4 +77,24 @@
   margin-left: 5px;
   font-size: 12px;
   opacity: 0.7;
+}
+
+.message-row--own {
+  justify-content: flex-end;
+  transform: translateX(17.5px);
+}
+
+.message-row--own .message__info {
+  flex-direction: row-reverse;
+}
+
+.message-row--own .message__bubble {
+  background-color: var(--yellow);
+  border-top-left-radius: 15px;
+  border-top-right-radius: 0px;
+  margin-left: 8px;
+}
+
+.message-row--own .message__time {
+  margin: 0;
 }
