--- a/css/components/screen-header.css
+++ b/css/components/screen-header.css
@@ -20,3 +20,16 @@
   top: -3px;
   right: -7px;
 }
+
+@keyframes rotateCog {
+  from {
+    transform: none;
+  }
+  to {
+    transform: rotateZ(360deg);
+  }
+}
+
+.screen-header .fa-cog:hover {
+  animation: rotateCog 2s linear infinite;
+}
